# autoresearch-wm

./: .gitignore  README.md  prepare.py  program.md  pyproject.toml  train.py
results/: claims.tsv  results.tsv  results_valloss_era.tsv
