[project]
name = "autoresearch-wm"
version = "0.1.0"
description = "Autonomous world model research"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "einops>=0.8.1",
    "huggingface-hub>=1.0.1",
    "matplotlib>=3.10.8",
    "muon-optimizer",
    "numpy>=2.2.6",
    "requests>=2.32.0",
    "torch==2.9.1",
    "webdataset>=1.0.2",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128" },
]
muon-optimizer = { git = "https://github.com/KellerJordan/Muon" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
